--- a/saie/web-app/reports/materia/materiasreporte.jrxml
+++ b/saie/web-app/reports/materia/materiasreporte.jrxml
@@ -9,8 +9,10 @@
 	<parameter name="nombreinstitucion" class="java.lang.String"/>
 	<parameter name="direccioninstitucion" class="java.lang.String"/>
 	<parameter name="telefonoinstitucion" class="java.lang.String"/>
-	<field name="nombre" class="java.lang.String"/>
+	<field name="denominacion" class="java.lang.String"/>
 	<field name="id" class="java.lang.Long"/>
+	<field name="nivel.descripcion" class="java.lang.String"/>
+	<field name="nivel.carrera.denominacion" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -53,10 +55,10 @@
 			</staticText>
 			<staticText>
 				<reportElement x="357" y="0" width="198" height="15"/>
-				<textElement textAlignment="Center">
+				<textElement>
 					<font fontName="Arial" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Materia]]></text>
+				<text><![CDATA[Carrera]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="5" y="1" width="28" height="11"/>
@@ -67,7 +69,7 @@
 			</staticText>
 			<staticText>
 				<reportElement x="200" y="0" width="125" height="15"/>
-				<textElement textAlignment="Center">
+				<textElement>
 					<font fontName="Arial" size="9" isBold="true" isPdfEmbedded="false"/>
 				</textElement>
 				<text><![CDATA[Nivel]]></text>
@@ -77,18 +79,32 @@
 	<detail>
 		<band height="12" splitType="Prevent">
 			<textField>
-				<reportElement x="57" y="1" width="100" height="11"/>
+				<reportElement x="10" y="0" width="10" height="11"/>
 				<textElement>
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{nombre}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="10" y="1" width="10" height="11"/>
-				<textElement>
-					<font size="8"/>
+					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression class="java.lang.Long"><![CDATA[$F{id}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="64" y="0" width="136" height="11"/>
+				<textElement>
+					<font fontName="Arial" size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{denominacion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="200" y="0" width="125" height="11"/>
+				<textElement>
+					<font fontName="Arial" size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{nivel.descripcion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="357" y="0" width="178" height="11"/>
+				<textElement>
+					<font fontName="Arial" size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{nivel.carrera.denominacion}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
