--- a/saie/web-app/reports/preinscripcion/reportepreinscripcion.jrxml
+++ b/saie/web-app/reports/preinscripcion/reportepreinscripcion.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="carrerasreporte" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.1"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="263"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["C:\\Users\\Andrea\\Documents\\workspace-sts-2.3.3.M2\\saie\\web-app\\reports\\carrera\\"]]></defaultValueExpression>
 	</parameter>
@@ -13,21 +13,10 @@
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<title>
-		<band height="49" splitType="Stretch">
-			<staticText>
-				<reportElement x="184" y="0" width="190" height="20"/>
-				<textElement textAlignment="Center">
-					<font fontName="Arial" size="14" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Cristian, necesito el título]]></text>
-			</staticText>
-		</band>
-	</title>
 	<detail>
-		<band height="149" splitType="Prevent">
+		<band height="260" splitType="Prevent">
 			<subreport>
-				<reportElement stretchType="RelativeToTallestObject" x="0" y="47" width="247" height="30"/>
+				<reportElement stretchType="RelativeToTallestObject" x="3" y="71" width="260" height="62"/>
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
 				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
 			</subreport>
@@ -56,7 +45,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[('Quien suscribe, ').concat($F{[0].alumno.apellido}).concat(' ').concat($F{[0].alumno.nombre})]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="77" width="539" height="32"/>
+				<reportElement x="3" y="181" width="539" height="28"/>
 				<textElement textAlignment="Justified">
 					<font fontName="Courier New" size="8"/>
 				</textElement>
@@ -65,18 +54,18 @@ Caso contrario, esta información será tomada como válida para el cobro de los
 RECIBI CONFORME COPIA DEL REGLAMENTO INTERNO DE ALUMNOS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="418" y="109" width="137" height="40"/>
+				<reportElement x="402" y="228" width="137" height="28"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[............................................
 Firma del solicitante]]></text>
 			</staticText>
 			<subreport>
-				<reportElement stretchType="RelativeToTallestObject" x="292" y="47" width="247" height="30"/>
+				<reportElement stretchType="RelativeToTallestObject" x="281" y="71" width="260" height="62"/>
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
 				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
 			</subreport>
 		</band>
-		<band height="100">
+		<band height="260">
 			<textField>
 				<reportElement x="0" y="26" width="247" height="18"/>
 				<textElement>
@@ -94,11 +83,6 @@ Firma del solicitante]]></text>
 				</textElement>
 				<text><![CDATA[SOLICITA LA MATRICULACION EN LAS SIGUIENTES MATERIAS DE LA CARRERA]]></text>
 			</staticText>
-			<subreport>
-				<reportElement x="0" y="45" width="555" height="10"/>
-				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
-				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
-			</subreport>
 			<textField>
 				<reportElement x="0" y="3" width="421" height="10"/>
 				<textElement>
@@ -106,8 +90,33 @@ Firma del solicitante]]></text>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[('Quien suscribe, ').concat($F{[0].alumno.apellido}).concat(' ').concat($F{[0].alumno.nombre})]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="1" y="180" width="539" height="28"/>
+				<textElement textAlignment="Justified">
+					<font fontName="Courier New" size="8"/>
+				</textElement>
+				<text><![CDATA[Para modificación de la presente, deberá comunicarlo al Preceptor antes del 31 de marzo del presente año.
+Caso contrario, esta información será tomada como válida para el cobro de los aranceles.
+RECIBI CONFORME COPIA DEL REGLAMENTO INTERNO DE ALUMNOS]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="402" y="224" width="137" height="28"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[............................................
+Firma del solicitante]]></text>
+			</staticText>
+			<subreport>
+				<reportElement stretchType="RelativeToTallestObject" x="281" y="72" width="260" height="62"/>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
+				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
+			</subreport>
+			<subreport>
+				<reportElement stretchType="RelativeToTallestObject" x="0" y="72" width="260" height="62"/>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
+				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
+			</subreport>
 		</band>
-		<band height="100">
+		<band height="260">
 			<textField>
 				<reportElement x="0" y="23" width="247" height="18"/>
 				<textElement>
@@ -118,11 +127,6 @@ Firma del solicitante]]></text>
 			<line>
 				<reportElement x="0" y="41" width="555" height="1"/>
 			</line>
-			<subreport>
-				<reportElement x="0" y="42" width="555" height="10"/>
-				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
-				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
-			</subreport>
 			<staticText>
 				<reportElement x="0" y="13" width="421" height="13"/>
 				<textElement>
@@ -137,6 +141,31 @@ Firma del solicitante]]></text>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[('Quien suscribe, ').concat($F{[0].alumno.apellido}).concat(' ').concat($F{[0].alumno.nombre})]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="3" y="189" width="539" height="28"/>
+				<textElement textAlignment="Justified">
+					<font fontName="Courier New" size="8"/>
+				</textElement>
+				<text><![CDATA[Para modificación de la presente, deberá comunicarlo al Preceptor antes del 31 de marzo del presente año.
+Caso contrario, esta información será tomada como válida para el cobro de los aranceles.
+RECIBI CONFORME COPIA DEL REGLAMENTO INTERNO DE ALUMNOS]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="402" y="232" width="137" height="28"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[............................................
+Firma del solicitante]]></text>
+			</staticText>
+			<subreport>
+				<reportElement stretchType="RelativeToTallestObject" x="282" y="69" width="260" height="62"/>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
+				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
+			</subreport>
+			<subreport>
+				<reportElement stretchType="RelativeToTallestObject" x="1" y="69" width="260" height="62"/>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
+				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
+			</subreport>
 		</band>
 	</detail>
 </jasperReport>
