--- a/legacysaie/web-app/reports/cuponrapipago.jrxml
+++ b/legacysaie/web-app/reports/cuponrapipago.jrxml
@@ -1,15 +1,475 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="cuponrapipago" language="groovy" pageWidth="595" pageHeight="421" orientation="Landscape" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
+	<parameter name="REPORTPATH" class="java.lang.String"/>
+	<field name="id" class="java.lang.Integer"/>
+	<field name="fechaAlta" class="java.sql.Date"/>
+	<field name="matricula.carrera.denominacion" class="java.lang.String"/>
+	<field name="cuota.mes" class="java.lang.Integer"/>
+	<field name="cuota.anio" class="java.lang.Integer"/>
+	<field name="numero" class="java.lang.Integer"/>
+	<field name="vencimiento1" class="java.sql.Date"/>
+	<field name="vencimiento2" class="java.sql.Date"/>
+	<field name="vencimiento3" class="java.sql.Date"/>
+	<field name="importe1" class="java.lang.Double"/>
+	<field name="importe2" class="java.lang.Double"/>
+	<field name="importe3" class="java.lang.Double"/>
+	<field name="codigoBarras" class="java.lang.String"/>
+	<field name="matricula.alumno.numeroDocumento" class="java.lang.String"/>
+	<field name="matricula.alumno.apellido" class="java.lang.String"/>
+	<field name="matricula.alumno.nombre" class="java.lang.String"/>
 	<detail>
 		<band height="421" splitType="Stretch">
+			<rectangle>
+				<reportElement x="306" y="169" width="270" height="135"/>
+			</rectangle>
+			<rectangle>
+				<reportElement x="11" y="169" width="270" height="135"/>
+			</rectangle>
+			<image>
+				<reportElement x="0" y="0" width="62" height="50"/>
+				<imageExpression class="java.lang.String"><![CDATA[new File($P{REPORTPATH}+"/images/","imagecomprobante.png")]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="306" y="0" width="62" height="50"/>
+				<imageExpression class="java.lang.String"><![CDATA[new File($P{REPORTPATH}+"/images/","imagecomprobante.png")]]></imageExpression>
+			</image>
+			<elementGroup>
+				<staticText>
+					<reportElement x="61" y="13" width="236" height="13"/>
+					<textElement textAlignment="Center">
+						<font fontName="Arial" size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[INSTITUTO SUPERIOR CRUZ ROJA ARGENTINA]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="61" y="25" width="236" height="7"/>
+					<textElement textAlignment="Center">
+						<font fontName="Arial" size="6" isBold="false"/>
+					</textElement>
+					<text><![CDATA[Filial CBA Pres. Jurd. Nac. Nº 379 C.]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="62" y="44" width="236" height="7"/>
+					<textElement textAlignment="Center">
+						<font fontName="Arial" size="6" isBold="false"/>
+					</textElement>
+					<text><![CDATA[TE: 4527161 - CORDOBA]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="61" y="34" width="236" height="7"/>
+					<textElement textAlignment="Center">
+						<font fontName="Arial" size="6" isBold="false"/>
+					</textElement>
+					<text><![CDATA[Juan de Garay 2096 - Bº Pueyrredon (5012)]]></text>
+				</staticText>
+			</elementGroup>
 			<staticText>
-				<reportElement x="41" y="51" width="100" height="20"/>
-				<textElement/>
-				<text><![CDATA[Static text]]></text>
+				<reportElement x="367" y="44" width="220" height="7"/>
+				<textElement textAlignment="Center">
+					<font fontName="Arial" size="6" isBold="false"/>
+				</textElement>
+				<text><![CDATA[TE: 4527161 - CORDOBA]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="367" y="25" width="220" height="7"/>
+				<textElement textAlignment="Center">
+					<font fontName="Arial" size="6" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Filial CBA Pres. Jurd. Nac. Nº 379 C.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="367" y="13" width="220" height="13"/>
+				<textElement textAlignment="Center">
+					<font fontName="Arial" size="8" isBold="true"/>
+				</textElement>
+				<text><![CDATA[INSTITUTO SUPERIOR CRUZ ROJA ARGENTINA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="367" y="34" width="220" height="7"/>
+				<textElement textAlignment="Center">
+					<font fontName="Arial" size="6" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Juan de Garay 2096 - Bº Pueyrredon (5012)]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="11" y="70" width="24" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="true"/>
+				</textElement>
+				<text><![CDATA[D.N.I]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="158" y="70" width="28" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="true"/>
+				</textElement>
+				<text><![CDATA[TICKET]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="453" y="70" width="28" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="true"/>
+				</textElement>
+				<text><![CDATA[TICKET]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="306" y="70" width="24" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="true"/>
+				</textElement>
+				<text><![CDATA[D.N.I]]></text>
+			</staticText>
+			<textField isBlankWhenNull="true">
+				<reportElement x="35" y="70" width="78" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{matricula.alumno.numeroDocumento}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="189" y="70" width="78" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{numero}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="330" y="70" width="78" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{matricula.alumno.numeroDocumento}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="484" y="70" width="78" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{numero}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="11" y="87" width="78" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{matricula.alumno.apellido}+', '+$F{matricula.alumno.nombre}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="11" y="107" width="78" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{matricula.carrera.denominacion}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="11" y="126" width="78" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{cuota.mes}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="306" y="107" width="78" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{matricula.carrera.denominacion}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="306" y="87" width="78" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{matricula.alumno.apellido}+', '+$F{matricula.alumno.nombre}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="306" y="126" width="78" height="9"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{cuota.mes}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="11" y="214" width="270" height="1"/>
+			</line>
+			<line>
+				<reportElement x="11" y="259" width="270" height="1"/>
+			</line>
+			<line>
+				<reportElement x="306" y="214" width="270" height="1"/>
+			</line>
+			<line>
+				<reportElement x="306" y="259" width="270" height="1"/>
+			</line>
+			<staticText>
+				<reportElement x="23" y="174" width="62" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="true"/>
+				</textElement>
+				<text><![CDATA[1º VENCIMIENTO]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="23" y="219" width="62" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="true"/>
+				</textElement>
+				<text><![CDATA[1º VENCIMIENTO]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="23" y="265" width="62" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="true"/>
+				</textElement>
+				<text><![CDATA[1º VENCIMIENTO]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="24" y="192" width="27" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[FECHA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="24" y="237" width="27" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[FECHA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="24" y="283" width="27" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[FECHA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="168" y="192" width="34" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[IMPORTE]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="168" y="237" width="34" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[IMPORTE]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="168" y="283" width="34" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[IMPORTE]]></text>
+			</staticText>
+			<textField pattern="MM/dd/yyyy" isBlankWhenNull="true">
+				<reportElement x="58" y="192" width="76" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Byte"><![CDATA[$F{vencimiento1}]]></textFieldExpression>
+			</textField>
+			<textField pattern="MM/dd/yyyy" isBlankWhenNull="true">
+				<reportElement x="58" y="237" width="76" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Byte"><![CDATA[$F{vencimiento2}]]></textFieldExpression>
+			</textField>
+			<textField pattern="MM/dd/yyyy" isBlankWhenNull="true">
+				<reportElement x="58" y="283" width="76" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Byte"><![CDATA[$F{vencimiento3}]]></textFieldExpression>
+			</textField>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement x="202" y="192" width="65" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$F{importe1}]]></textFieldExpression>
+			</textField>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement x="202" y="237" width="65" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$F{importe2}]]></textFieldExpression>
+			</textField>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement x="202" y="283" width="65" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$F{importe3}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="462" y="192" width="34" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[IMPORTE]]></text>
+			</staticText>
+			<textField pattern="MM/dd/yyyy" isBlankWhenNull="true">
+				<reportElement x="352" y="237" width="76" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Byte"><![CDATA[$F{vencimiento2}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="317" y="265" width="62" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="true"/>
+				</textElement>
+				<text><![CDATA[1º VENCIMIENTO]]></text>
+			</staticText>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement x="496" y="192" width="65" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$F{importe1}]]></textFieldExpression>
+			</textField>
+			<textField pattern="MM/dd/yyyy" isBlankWhenNull="true">
+				<reportElement x="352" y="192" width="76" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Byte"><![CDATA[$F{vencimiento1}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="462" y="283" width="34" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[IMPORTE]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="318" y="237" width="27" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[FECHA]]></text>
+			</staticText>
+			<textField pattern="MM/dd/yyyy" isBlankWhenNull="true">
+				<reportElement x="352" y="283" width="76" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Byte"><![CDATA[$F{vencimiento3}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="462" y="237" width="34" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[IMPORTE]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="317" y="174" width="62" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="true"/>
+				</textElement>
+				<text><![CDATA[1º VENCIMIENTO]]></text>
+			</staticText>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement x="496" y="237" width="65" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$F{importe2}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="318" y="283" width="27" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[FECHA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="318" y="192" width="27" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[FECHA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="317" y="219" width="62" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="true"/>
+				</textElement>
+				<text><![CDATA[1º VENCIMIENTO]]></text>
+			</staticText>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement x="496" y="283" width="65" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$F{importe3}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="24" y="313" width="195" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[FUERA DE VENCIMIENTO, UNICAMENTE EN INSTITUTO]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="318" y="313" width="195" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[FUERA DE VENCIMIENTO, UNICAMENTE EN INSTITUTO]]></text>
+			</staticText>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement x="11" y="353" width="270" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$F{codigoBarras}]]></textFieldExpression>
+			</textField>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement x="306" y="353" width="270" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$F{codigoBarras}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="11" y="393" width="47" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[IMPRESO EL]]></text>
+			</staticText>
+			<textField isBlankWhenNull="true">
+				<reportElement x="62" y="393" width="100" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.util.Date"><![CDATA[$F{fechaAlta}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="306" y="393" width="47" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7" isBold="false"/>
+				</textElement>
+				<text><![CDATA[IMPRESO EL]]></text>
+			</staticText>
+			<textField isBlankWhenNull="true">
+				<reportElement x="355" y="393" width="100" height="10"/>
+				<textElement>
+					<font fontName="Arial" size="7"/>
+				</textElement>
+				<textFieldExpression class="java.util.Date"><![CDATA[$F{fechaAlta}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 </jasperReport>
